--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Step 1 - Victims Info :)</title>
+  <title>Step 1 - Victims Info</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
