Added language select options

--- a/index.html
+++ b/index.html
@@ -48,7 +48,16 @@
           <input class="u-full-width" type="date" placeholder="day/month/year" id="dateOfBirth">
 
           <label for="primaryLang">Primary Language</label>
-          <input class="u-full-width" type="name" placeholder="Main language spoken" id="primaryLang">
+          <select class="u-full-width" id="primaryLang">
+            <option value="Option 1">English</option>
+            <option value="Option 2">Kiswahili</option>
+            <option value="Option 1">Kikuyu</option>
+            <option value="Option 2">Kijaluo</option>
+            <option value="Option 1">Maasai</option>
+            <option value="Option 2">Kamba</option>
+            <option value="Option 1">Other</option>
+            <option value="Option 2">Not Kenyan</option>
+          </select>
 
           <label for="heightWeight">Height and Height</label>
           <input class="u-full-width" type="name" placeholder="Height - Weight" id="heightWeight">
