Temp form for Heritage

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Step 1 - Victims Info</title>
+  <title>Heritage Insurance - Sales</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -34,15 +34,9 @@
      <form>
       <div class="row">
         <div class="u-full-width">
-          <h4>Collect the following information</h4>
-          <label for="victimsName">Victims Name</label>
-          <input class="u-full-width" type="name" placeholder="Victim's Name in full" id="victimsName">
-
-          <label for="GenderPicker">Gender</label>
-          <select class="u-full-width" id="GenderPicker">
-            <option value="Option 1">Male</option>
-            <option value="Option 2">Female</option>
-          </select>
+          <h5>Please fill in your details and we will get right back</h5>
+          <label for="victimsName">Your name</label>
+          <input class="u-full-width" type="name" placeholder="Your Name in full" id="victimsName">
 
           <label for="dateOfBirth">Date of Birth</label>
           <input class="u-full-width" type="date" placeholder="day/month/year" id="dateOfBirth">
@@ -51,30 +45,23 @@
           <select class="u-full-width" id="primaryLang">
             <option value="Option 1">English</option>
             <option value="Option 2">Kiswahili</option>
-            <option value="Option 1">Kikuyu</option>
-            <option value="Option 2">Kijaluo</option>
-            <option value="Option 1">Maasai</option>
-            <option value="Option 2">Kamba</option>
             <option value="Option 1">Other</option>
             <option value="Option 2">Not Kenyan</option>
           </select>
 
-          <label for="heightWeight">Height and Height</label>
-          <input class="u-full-width" type="name" placeholder="Height - Weight" id="heightWeight">
-
-          <label for="fullAddress">Full Address</label>
-          <input class="u-full-width" type="name" placeholder="Street, Town, County" id="fullAddress">
-
           <label for="telephone">Phone Number</label>
           <input class="u-full-width" type="name" placeholder="+254 7** *** ***" id="telephone">
           
-          <label for="guardianDetails">Guardians Details</label>
-          <input class="u-full-width" type="name" placeholder="Guardian Name, Phone number" id="guardianDetails">
-
-          <label class="example-send-yourself-copy">
-          <input type="checkbox">
-            <span class="label-body">Tick if victim has a disability</span>
-          </label>
+          <label for="telephone">Email</label>
+          <input class="u-full-width" type="name" placeholder="me@example.com" id="telephone">
+          
+          <label for="primaryLang">What are you interested in</label>
+          <select class="u-full-width" id="primaryLang">
+            <option value="Option 1">Health</option>
+            <option value="Option 2">Motor</option>
+            <option value="Option 1">Personal Accident</option>
+            <option value="Option 2">Other</option>
+          </select>
 
           <input class="button-primary" type="submit" value="Submit">
 
